sumo/tests/duarouter/routes/style1_input/errors/vehicle_false_departlane/errors.duarouter
Error: Invalid departLane definition for vehicle '0'
Quitting (on error).
